--- a/.github/workflows/sync-flows.yml
+++ b/.github/workflows/sync-flows.yml
@@ -30,7 +30,7 @@ jobs:
     container:
       image: engswee/flashpipe:2.x.x-lite
     env:
-      HOST_TMN: c8e958b8trial.integrationsuite-trial.cfapps.us10-001.hana.ondemand.com
+      HOST_TMN: c8e958b8trial.it-cpitrial05-rt.cfapps.us10-001.hana.ondemand.com
       HOST_OAUTH: c8e958b8trial.authentication.us10.hana.ondemand.com
       OAUTH_CLIENTID: ${{ secrets.DEV_CLIENT_ID }}
       OAUTH_CLIENTSECRET: ${{ secrets.DEV_CLIENT_SECRET }}     
